<resources>
    <string name="app_name">Solky</string>
    <string name="home">Home</string>
    <string name="signs">Led Signs</string>
    <string name="my_signs">My Led Signs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    //OTHERS
    <string name="go_back">Go Back</string>

    //MY SIGNS FRAGMENT
    <string name="favorite_signs">Favorite Led Signs</string>
    <string name="empty_list">Empty List</string>

    //SIGNS LED
    <string name="led_signs">Led Signs</string>


    //DIALOG SAVE
    <string name="save_sign">Save Led Sign</string>
    <string name="name_sign">Enter a led sign name</string>
    <string name="delete_sign">Are you sure to remove the led Sign?</string>
    <string name="name_sign_hint">Please enter a valid name</string>

    //HOME FRAGMENT
    <string name="title">Titles</string>
    <string name="background">Background</string>
    <string name="enter_text">Enter a text</string>
    <string name="another_text">Enter another text</string>
    <string name="style">Add Style</string>
    <string name="edit_style">Edit Style</string>

    <string name="play_animation">Play Animation</string>
    <string name="full_view">Full View</string>

    //TOAST
    <string name="stop_animations">Stop Animations</string>
    <string name="textNotValid">Enter a Valid Text</string>
    <string name="save_text_one">You must save at least 1 Text</string>
    <string name="name_valid">Please enter a valid name</string>
    <string name="loading_screen">Loading Screen</string>

    //SIGN FRAGMENT
    <string name="welcome">Welcome</string>
    <string name="study_time">Study Time</string>
    <string name="motivation">Motivation</string>
    <string name="live_streaming">Live Streaming</string>
    <string name="live_streaming2">0</string>
    //Sign Fragment on Full View
    <string name="welcome_caps">WELCOME</string>
    <string name="welcome_phrase_motivation_1">You are destined for something</string>
    <string name="welcome_phrase_motivation_2">try and find it</string>




    //DIALOG TITLE
    <string name="font">Font</string>
    <string name="animation">Animation</string>
    <string name="speed">Speed</string>
    <string name="texture">Texture</string>

    //SPINNERS TITLE
    <string-array name="spFontItems">
        <item>DmSan</item>
        <item>LeagueGothic</item>
        <item>DmSerifText</item>
        <item>Fugazone</item>
        <item>SixtyFour</item>
        <item>PressStart</item>
        <item>BungeeShade</item>
        <item>Amatic</item>
    </string-array>

    <string-array name="spAnimationItems">
        <item>None</item>
        <item>Horizontal Displacement</item>
        <item>Blink</item>
        <item>Floating</item>
        <item>Rotate</item>
        <item>Zoom</item>
    </string-array>

    <string-array name="spSpeedAnimationItems">
        <item>Normal</item>
        <item>Slow</item>
        <item>Fast</item>
    </string-array>

    <string-array name="spTextureItems">
        <item>Normal</item>
        <item>Pixel</item>
    </string-array>





</resources>
