<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDialogSave"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp"
        android:background="@color/transparent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvSaveSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_sign"
                android:textColor="@color/primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="28sp"
                android:layout_marginVertical="15dp"
                />

            <TextView
                android:id="@+id/tvNameSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_sign"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSaveSign"
                android:textSize="18sp"
                android:layout_marginVertical="15dp"
                />

            <EditText
                android:id="@+id/etNameSign"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNameSign"
                android:layout_marginTop="10dp"
                android:hint="@string/name_sign_hint"
                android:padding="10dp"
                android:maxLength="28"
                android:layout_marginHorizontal="40dp"
                android:background="@drawable/namesign_dialogsave"
                />

            <ImageButton
                android:id="@+id/btnBackSave"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_back"
                app:layout_constraintTop_toBottomOf="@id/etNameSign"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnCheckSave"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_borders"
                android:backgroundTint="@color/tertiary"
                app:tint="@color/white"
                />

            <ImageButton
                android:id="@+id/btnCheckSave"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_check"
                app:layout_constraintTop_toBottomOf="@id/etNameSign"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnBackSave"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/rounded_borders"
                android:backgroundTint="@color/tertiary"
                app:tint="@color/white"


                />





        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>